--- a/MojeAPI/appsettings.json
+++ b/MojeAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BooksConnectionString": "Server=(localdb)\\mssqllocaldb;Database=LibraryDB;Trusted_Connection=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
