--- a/MojeAPI/appsettings.json
+++ b/MojeAPI/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "EmailConfiguration": {
+    "From": "kpjoter56@gmail.com",
+    "SmtpServer": "smtp.gmail.com",
+    "Port": 465,
+    "Username": "kpjoter56@gmail.com",
+    "Password": "Kacper1!"
+  },
   "AllowedHosts": "*"
 }
