--- a/MojeAPI/appsettings.json
+++ b/MojeAPI/appsettings.json
@@ -13,7 +13,11 @@
     "SmtpServer": "smtp.gmail.com",
     "Port": 465,
     "Username": "kpjoter56@gmail.com",
-    "Password": "Kacper1!"
+    "Password": "kynaivxzifndwpaf"
+      //hasło do maila to: Maciek123!
+  },
+  "FeatureManagement": {
+    "isSendingEnabled": true
   },
   "AllowedHosts": "*"
 }
