--- a/EmailServiceV2/EmailServiceV2.csproj
+++ b/EmailServiceV2/EmailServiceV2.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.17" />
+    <PackageReference Include="Microsoft.FeatureManagement" Version="2.5.1" />
     <PackageReference Include="MimeKit" Version="3.3.0" />
     <PackageReference Include="NETCore.MailKit" Version="2.1.0" />
   </ItemGroup>
